--- a/GraphDFS/GraphDFS.csproj
+++ b/GraphDFS/GraphDFS.csproj
@@ -36,6 +36,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CC.cs" />
     <Compile Include="GraphDFS.cs" />
   </ItemGroup>
   <ItemGroup>
