--- a/GraphBFS/GraphBFS.csproj
+++ b/GraphBFS/GraphBFS.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A13BF7BB-BDB1-45C9-8A01-35F09589145E}</ProjectGuid>
+    <ProjectGuid>{C4401216-FC7F-4344-B064-9D5422EB215D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>GraphDFS</RootNamespace>
-    <AssemblyName>GraphDFS</AssemblyName>
+    <RootNamespace>GraphBFS</RootNamespace>
+    <AssemblyName>GraphBFS</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,15 +33,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryGraph.cs" />
-    <Compile Include="CC.cs" />
-    <Compile Include="CycleDetection.cs" />
-    <Compile Include="GraphDFS.cs" />
-    <Compile Include="Path.cs" />
+    <Compile Include="GraphBFS.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleSourcePath.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Graph\Graph.csproj">
